--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
         <module>user</module>
         <module>consumer</module>
         <module>gateway</module>
+        <module>QueryByCategory</module>
+        <module>GetStockDaily</module>
     </modules>
 
     <parent>
