行情中心获取股票信息

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <module>consumer</module>
         <module>gateway</module>
         <module>QueryByCategory</module>
-        <module>GetStockDaily</module>
+        <module>PriceCenter</module>
     </modules>
 
     <parent>
