--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>user</module>
         <module>consumer</module>
         <module>gateway</module>
+        <module>ESearch</module>
     </modules>
 
     <parent>
