--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=service-consumer
 spring.cloud.nacos.discovery.server-addr=39.99.218.252:8848
-spring.datasource.url=jdbc:mysql://39.101.216.58:3306/user?serverTimeZone=GMT%2B8"
+spring.datasource.url=jdbc:mysql://39.101.216.58:3306/database?serverTimeZone=GMT%2B8"
 spring.datasource.username=root
 spring.datasource.password=Xiangmu@Kong
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
