--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>common</module>
-        <module>user</module>
-        <module>consumer</module>
         <module>gateway</module>
+        <module>filterService</module>
+        <module>stockDetailService</module>
     </modules>
 
     <parent>
