第二轮迭代

--- a/NavigateToPage/src/main/resources/application.properties
+++ b/NavigateToPage/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8090
-spring.application.name=query-stock-by-category
+server.port=8093
+spring.application.name=navigate-to-page
 spring.cloud.nacos.discovery.server-addr=39.99.218.252:8848
 spring.datasource.url=jdbc:mysql://39.101.216.58:3306/database?serverTimeZone=GMT%2B8"
 spring.datasource.username=root
