--- a/PriceCenter/src/main/resources/application.properties
+++ b/PriceCenter/src/main/resources/application.properties
@@ -13,12 +13,5 @@ spring.sleuth.sampler.probability=1.0
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
+spring.cloud.nacos.discovery.ip=47.115.28.231
 spring.cloud.inetutils.ignored-interfaces=eth.*
-spring.cloud.inetutils.preferred-networks=47.115.28.231 # 填写公网IP
-
-
-spring.redis.database=0
-spring.redis.host=47.98.38.137
-spring.redis.port=6379
-spring.redis.password=Xiangmu@Kong
-spring.redis.expire=3600
