--- a/NavigateToPage/pom.xml
+++ b/NavigateToPage/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>PriceCenter</artifactId>
+    <artifactId>NavigateToPage</artifactId>
 
     <dependencies>
         <dependency>
@@ -49,5 +49,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
