变更配置文件

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>gateway</module>
         <module>filterService</module>
         <module>stockDetailService</module>
+        <module>Esearch</module>
     </modules>
 
     <parent>
