--- a/ESearch/src/main/resources/application.properties
+++ b/ESearch/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8020
-spring.application.name=service-ESearch
+spring.application.name=ESearch
 spring.cloud.nacos.discovery.server-addr=39.99.218.252:8848
-spring.datasource.url=jdbc:mysql://39.101.216.58:3306/database?serverTimeZone=GMT%2B8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=Xiangmu@Kong
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.cloud.nacos.discovery.ip=121.89.223.225
+spring.cloud.inetutils.ignored-interfaces=eth.*
+
+
 spring.cloud.sentinel.transport.port=8719
 spring.cloud.sentinel.transport.dashboard=39.99.218.252:8858
 spring.zipkin.base-url=http://39.99.218.252:9411/
